fix(anchor): TEHVEER-299 - fullWidth now stretches Anchor

--- a/packages/components/src/components/button-content/button-content.module.scss
+++ b/packages/components/src/components/button-content/button-content.module.scss
@@ -366,3 +366,7 @@ $btn-height-small: 2.25rem;
 .btn--no-style {
   @include mixins.button-reset;
 }
+
+.btn--full-width {
+  width: 100%;
+}
